--- a/bundle/.imgpkg/images.yml
+++ b/bundle/.imgpkg/images.yml
@@ -1,3 +1,5 @@
+#! Copyright 2022 VMware, Inc.
+#! SPDX-License-Identifier: Apache-2.0
 ---
 apiVersion: imgpkg.carvel.dev/v1alpha1
 kind: ImagesLock
