--- a/bundle/config/clusterbuilder.yaml
+++ b/bundle/config/clusterbuilder.yaml
@@ -1,3 +1,6 @@
+#! Copyright 2022 VMware, Inc.
+#! SPDX-License-Identifier: Apache-2.0
+
 #@ load("@ytt:data", "data")
 ---
 apiVersion: kpack.io/v1alpha2
