--- a/templated/clusterstack.yaml
+++ b/templated/clusterstack.yaml
@@ -1,5 +1,7 @@
-#@ load("@ytt:data", "data")
+#! Copyright 2022 VMware, Inc.
+#! SPDX-License-Identifier: Apache-2.0
 
+#@ load("@ytt:data", "data")
 ---
 apiVersion: kpack.io/v1alpha2
 kind: ClusterStack
