Add release notes
- Fix markdown linter

--- a/package/package.yaml
+++ b/package/package.yaml
@@ -11,7 +11,7 @@ spec:
   refName: kpack-dependencies.community.tanzu.vmware.com
   version: #@ data.values.version
   capacityRequirementsDescription: Registry with > 1GB available space
-  releaseNotes: ""
+  releaseNotes: #@ "https://github.com/vmware-tanzu/package-for-kpack-dependencies/releases/tag/v" + data.values.version
   valuesSchema:
     openAPIv3:
       title: kpack-dependencies.community.tanzu.vmware.com values schema
